# Audio

./: .gitignore  ADSR_Publication_ToDo_Guide.md  ADSR_Research_Plan_FINAL_EN_2026-05-29.md  AGENTS.md  Code_Review_Guide.md  GITHUB_UPLOAD_REPORT_20260709.md  MANIFEST.md  ORBIT_EXPERIMENT_RESULTS.md  ORBIT_OPEN_QUESTIONS.md  ORBIT_RESEARCHER_LOG.md  ORBIT_TASK_BOARD.md  PROGRESS_REPORT_2026-05-28.md  QA_ANSWERS.md  README.md  RESEARCHER_HANDOFF.md  experiment_plan_current.md  m1a_spot_check_verdicts_2026-05-21.json  pyproject.toml  requirements.txt  revise.md  实验进度总结_2026-06-13.md
analysis_exit1/: EVALUATOR_AUDIOSET_MODEL_METADATA.json  EVALUATOR_AUDIOSET_SCORES.csv  EVALUATOR_COMPARISON_AUDIT.json  EVALUATOR_COMPARISON_TABLE.md  EVALUATOR_DETECTOR_FILL_SCORES.csv  EVALUATOR_INPUT_ROWS.csv  EVALUATOR_MEDIA_MANIFEST.csv  EVALUATOR_PREP_AUDIT.json  EVALUATOR_WHISPER_SCORES.csv  EXIT1_BUNDLE_REPORT.md  RECIPE_CURVES.csv  RECIPE_CURVES.md  RECIPE_CURVES_AUDIT.json  TEST_RESULTS.txt  TEST_RESULT_SUMMARY.json  UNCONDITIONAL_AUDIO_SHA256SUMS  UNCONDITIONAL_BASE_RATE.md  UNCONDITIONAL_GENERATION_MANIFEST.csv  UNCONDITIONAL_PREP_AUDIT.json  UNCONDITIONAL_PREREGISTRATION.json  UNCONDITIONAL_RUN_MANIFEST.json  UNCONDITIONAL_SCORES.csv  exit1_analysis.py  neutral_prompts.csv
analysis_exit1_v2/: DISPATCH_A_AMENDMENTS.md  DISPATCH_A_TEST_RESULTS.txt  EVALUATOR_AUDIOSET_HUMAN_VOICE_AUDIT.json  EVALUATOR_AUDIOSET_HUMAN_VOICE_SCORES.csv  EVALUATOR_COMPARISON_AUDIT.json  EVALUATOR_COMPARISON_TABLE.md  EXIT1_V2_FINAL_REPORT.md  EXIT1_V2_SUPERSESSION_REPORT.md  RECIPE_CURVES_V2.csv  (+8 more)
(+1933 files in other folders)
