[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mprm"
version = "0.1.0"
description = "Headroom-Gated M-PRM: Musically Structured Process Reward Modeling for Flow-Matching Music RL"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.10",
    "diffusers>=0.27",
    "librosa>=0.10",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonlines>=4.0",
    "rich>=13.0",
    "tqdm>=4.66",
    "mir_eval>=0.7",
    "demucs>=4.0",
    "openai-whisper>=20231117",
    "soundfile>=0.12",
    "einops>=0.7",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]
wandb = [
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
